--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
+    "app-root-path": "^3.1.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "winston": "^3.8.2"
   },
   "name": "login-lecture",
   "version": "1.0.0",
